--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 margin-bottom: 20px;
                 display: flex;
                 padding: 10px;
+                border: 2px;
                 border-radius: 20px;
             }
             nav header {
@@ -69,8 +70,8 @@
     </head>
     <body>
         <div id="all-contents">
-            <header>Ben's Website!</header>
             <nav>
+                <header>Ben's Website!</header>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
