pushing first website

--- a/projects/runtime/index.html
+++ b/projects/runtime/index.html
@@ -40,6 +40,9 @@
         <script src="js/game.js"></script>
 
        <!-- add any additional scripts here -->
+       <script src="js/view/hud.js"></script>
+       <script src="js/view/background.js"></script>
+       <script src="js/level01.js"></script>
 
         <style type="text/css">
             /*override default styles here*/
@@ -84,6 +87,8 @@
                 ground = opspark.makeGround(app);
 
                 // TODO 2 : add background
+                var background = opspark.makeBackground(app,ground);
+                view.addChild(background);
                 
                 var help = draw.textfield('MOVES || w: jump | e: flying jump | s: duck | space: fire | q your mom!', 
                     '20px Arial',
@@ -122,8 +127,13 @@
                 }
                 
                 // TODO 1 : add a heads-up display to game
+                var hud = opspark.makeHud();
+                view.addChild(hud);
+                window.hud = hud;
 
                 // TODO 3 : create game manager
+                var game = opspark.createGameManager(app,hud);
+                opspark.runLevelInGame(game);
 
             })();
         </script>
