--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Ben Spector's Website</title>
         <style>
             body {
-				background: url("https://s-media-cache-ak0.pinimg.com/originals/42/13/62/4213620254d4759dd99fa9216e88102a.jpg");
+		background: url("img/cactus-background.png");
                 color: rgb(45, 45, 45);
                 padding: 10px;
                 font-family: arial;
