--- a/portfolio.html
+++ b/portfolio.html
@@ -4,10 +4,10 @@
         <title>Ben's Portfolio</title>
         <style>
             body {
-				background: url("https://s-media-cache-ak0.pinimg.com/originals/42/13/62/4213620254d4759dd99fa9216e88102a.jpg");
-                color: rgb(45, 45, 45);
-                padding: 10px;
-                font-family: arial;
+	        background: url("img/cactus-background.png");
+            	color: rgb(45, 45, 45);
+            	padding: 10px;
+            	font-family: arial;
             }
             header {
                 font-size: 1.5em;
