bouncing box title

--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -3,7 +3,7 @@
 <head>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>  
   <meta charset="utf-8">
-  <title>JS Bin</title>
+  <title>Bouncing Box</title>
   <style>
     .box {
       display: block;
