--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="examples.html">Examples</a></li>
                 </ul>
             </nav>
     
