--- a/examples.html
+++ b/examples.html
@@ -95,7 +95,7 @@
                 <div class="content">
                     <h1>Examples</h1>
                     <ul id="examples">
-                        <li onclick="iterationDebugging()"> Iteration Debugging </li>
+                        <li onclick="iterationDebugging()"> Iteration </li>
                     </ul>
                 </div>
             </main>
