--- a/examples.html
+++ b/examples.html
@@ -4,6 +4,7 @@
         <title>Ben's Portfolio</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/core.js"></script>
         <script src="js-examples/iteration-debugging.js"></script>
+        <script src="js-examples/isPalindrome-debugging.js"></script>
         <style>
             body {
 	        background: url("img/cactus-background.png");
@@ -96,6 +97,8 @@
                     <h1>Examples</h1>
                     <ul id="examples">
                         <li onclick="iterationDebugging()"> Iteration </li>
+                        <li onclick="isPalindromeDebugging()"> isPalindrome </li>
+                        <li><a href="js-examples/coinFlip/coinFlip.html">coinFlip</a></li>
                     </ul>
                 </div>
             </main>
