--- a/js-examples/coinFlip/coinFlip.html
+++ b/js-examples/coinFlip/coinFlip.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <button>press me to flip coin</button>
-    <h1 id="heads">heads: </h1>
-    <h1 id="maxFlips">maxFlips: </h1>
+    <h1 id="heads">Heads: </h1>
+    <h1 id="totalFlips">Out of: </h1>
 </body>
 </html>
