--- a/examples.html
+++ b/examples.html
@@ -96,8 +96,8 @@
                 <div class="content">
                     <h1>Examples</h1>
                     <ul id="examples">
-                        <li onclick="iterationDebugging()"> Iteration </li>
-                        <li onclick="isPalindromeDebugging()"> isPalindrome </li>
+                        <li onclick="iterationDebugging()"> Iteration Example </li>
+                        <li onclick="isPalindromeDebugging()"> isPalindrome (bugged)</li>
                         <li><a href="js-examples/coinFlip/coinFlip.html">coinFlip</a></li>
                     </ul>
                 </div>
