--- a/js-examples/coinFlip/coinFlip.html
+++ b/js-examples/coinFlip/coinFlip.html
@@ -4,7 +4,7 @@
   <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
   <script src="coinFlip.js"></script>
   
-  <title>JS Bin</title>
+  <title>Coin Flip</title>
 </head>
 <body>
     <button>press me to flip coin</button>
